{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "bc66c226-26a8-4c11-a597-fecbf0d921a1",
            "actions": [
                {
                    "name": "Move_Down",
                    "type": "Button",
                    "id": "c481ff6f-48a1-47ae-b955-d2443b82be49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_Up",
                    "type": "Button",
                    "id": "81a41968-96dd-4485-95cf-72efb526afac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_Left",
                    "type": "Button",
                    "id": "7c64e202-d51c-4f4a-8e3a-566aa108670f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_Right",
                    "type": "Button",
                    "id": "f386bf66-8927-4690-9242-1ba36193ccef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2afbb51d-6c49-4e1d-b8bf-604edc1ddeed",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move_Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84a3c56c-1e95-41fb-b48c-468645913b7c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move_Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d19c6227-b0d9-495b-9eed-b0360f676eeb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f9b590e-62b4-429f-a66d-ef1854f7063b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}